--- a/src/app/books/book/book.component.html
+++ b/src/app/books/book/book.component.html
@@ -29,8 +29,8 @@
     <!--<i class="fa fa-arrow-circle-right float-right"></i>-->
     <app-favorite class="float-right"
                   [reviews]="book.starRating"
-                  [favorite]="book.name"
-                  (favoriteClicked)="onFavoriteClicked($event)">
+                  [favorite]="book.name">
+                  <!--(favoriteClicked)="onFavoriteClicked($event)"-->
     </app-favorite>
 
   </div>
